# CppTools

./: .gitignore  CLAUDE.md  CMakeLists.txt  MODERNIZATION_PLAN.md  README  README.md
.github/workflows/: ci.yml  complexity.yml
commonlibs/: HDLCmsg.hpp  SMSparser.hpp  algorithms.hpp  avlmapping.hpp  common_errorcode.hpp  connection.hpp  connection_http.hpp  connection_new.hpp  ctrlc.hpp  currentprocessid.hpp  datagram.hpp  errorstatus.hpp  fcstab.cpp  mapindex.hpp  mysqldatabaseConn.hpp  posixtime_util.hpp  prefix_tree.hpp  probemessage.hpp  processstatus.hpp  protoarray.hpp  segment_tree.hpp  signalhandler.hpp  singleton.hpp  sleeprelative.hpp  textlogger.hpp  uniqueptr.hpp
commonlibs/TNT/jama/: jama_cholesky.h  jama_lu.h
commonlibs/dp/: kalman.hpp  matrixinversion.hpp
commonlibs/interproc/: interp.hpp
commonlibs/sensors/: ECL2010PTH.hpp  sensys.hpp  sms-SPaT.pb.cc  sms-SPaT.pb.h  sms-SPaT.proto  sms-to-proto.hpp  sms-types.hpp  smsradar-interface.hpp  smsradar.hpp
commonlibs/sensors/pathlibSMS/: sms_lib.c  sms_lib.h  smscmd.c  smsparse.c  smsparse.h  smsparse_lib.c  smstestdata.txt
tests/: CMakeLists.txt  test_algorithms.cpp  test_connection_new.cpp  test_ctrlc.cpp  test_currentprocessid.cpp  test_errorstatus.cpp  test_interp.cpp  test_kalman.cpp  test_matrixinversion.cpp  test_posixtime_util.cpp  test_prefix_tree.cpp  test_segment_tree.cpp  test_singleton.cpp  test_sleeprelative.cpp  test_textlogger.cpp
